--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="457616970060-1md3olpo431l4qtpe5qdcdl883bi1g8s.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta
       name="description"
       content="Web site created using create-react-app"
